--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -42,54 +42,57 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-                    <com.google.android.material.card.MaterialCardView
-                        android:id="@+id/cardImg"
-                        android:layout_width="match_parent"
-                        android:layout_height="281dp"
-                        android:layout_marginTop="10dp"
-                        android:contextClickable="true"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardImg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:contextClickable="true"
 
-                        android:orientation="vertical"
-                        app:cardBackgroundColor="@color/black"
-                        app:cardCornerRadius="15dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="1.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.0"
-                        tools:ignore="MissingConstraints">
+        android:orientation="vertical"
+        app:cardBackgroundColor="@color/black"
+        app:cardCornerRadius="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-                        <ImageView
-                            android:id="@+id/imageView2"
-                            android:layout_width="match_parent"
-                            android:layout_height="200dp"
-                            android:layout_gravity="center"
-                            android:outlineAmbientShadowColor="@color/cardview_dark_background"
-                            android:outlineSpotShadowColor="@color/purple_700" />
+            <TextView
+                android:id="@+id/titleEd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
 
+                android:gravity="center"
+                android:lineSpacingExtra="12sp"
+                android:text="titleEd"
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textColor="#F8F805"
+                android:textSize="24sp"
 
-                        <TextView
-                            android:id="@+id/titleEd"
-                            android:layout_width="match_parent"
-                            android:layout_height="40dp"
-                            android:layout_marginTop="0dp"
-
-                            android:gravity="center"
-                            android:lineSpacingExtra="12sp"
-                            android:text="titleEd"
-                            android:textAlignment="center"
-                            android:textAllCaps="true"
-                            android:textColor="#F8F805"
-                            android:textSize="24sp"
-
-                            android:textStyle="bold" />
+                android:textStyle="bold" />
 
 
-                    </com.google.android.material.card.MaterialCardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </com.google.android.material.card.MaterialCardView>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
                 </FrameLayout>
+
 
                 <LinearLayout
                     android:id="@+id/linearLayout2"
@@ -120,7 +123,7 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:id="@+id/description2"
+
                                 android:layout_width="match_parent"
                                 android:layout_height="40dp"
                                 android:layout_marginTop="0dp"
@@ -152,257 +155,40 @@
                     </com.google.android.material.card.MaterialCardView>
 
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/linearLayout6"
-                    android:layout_width="171dp"
-                    android:layout_height="50dp"
-
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="5dp"
-                    android:orientation="vertical"
-                    app:layout_constraintStart_toStartOf="parent"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/img"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
-                    <com.google.android.material.card.MaterialCardView
+                    <ImageView
+                        android:id="@+id/imageView2"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-
-                        app:cardCornerRadius="15dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-
-                            android:orientation="vertical">
-
-
-                            <TextView
-                                android:id="@+id/description6"
-
-                                android:layout_width="match_parent"
-                                android:layout_height="25dp"
-
-
-                                android:gravity="center"
-
-                                android:textAlignment="center"
-                                android:textAllCaps="true"
-                                android:textColor="#FBFDFD"
-                                android:textSize="12sp"
-                                android:textStyle="bold"
-                                android:typeface="normal" />
-
-                            <TextView
-                                android:id="@+id/genre2"
-                                android:layout_width="match_parent"
-                                android:layout_height="25dp"
-
-
-                                android:gravity="center"
-
-
-                                android:textAlignment="center"
-                                android:textAllCaps="true"
-                                android:textColor="#00E5FF"
-                                android:textSize="10sp"
-                                android:textStyle="bold" />
-
-
-                        </LinearLayout>
-                    </com.google.android.material.card.MaterialCardView>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/linearLayout7"
-                    android:layout_width="171dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="20dp"
-                    android:orientation="vertical"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
-                    <com.google.android.material.card.MaterialCardView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:cardCornerRadius="15dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-
-                            android:orientation="vertical">
-
-
-                            <TextView
-                                android:id="@+id/description7"
-                                android:layout_width="match_parent"
-                                android:layout_height="25dp"
-
-
-                                android:gravity="center"
-
-                                android:textAlignment="center"
-                                android:textAllCaps="true"
-                                android:textColor="#FBFDFD"
-                                android:textSize="12sp"
-                                android:textStyle="bold"
-                                android:typeface="normal" />
-
-
-                            <TextView
-                                android:id="@+id/dateRealese2"
-                                android:layout_width="match_parent"
-                                android:layout_height="25dp"
-
-
-                                android:gravity="center"
-
-
-                                android:textAlignment="center"
-                                android:textAllCaps="true"
-                                android:textColor="#00E5FF"
-                                android:textSize="10sp"
-                                tools:ignore="SmallSp" />
-
-
-                        </LinearLayout>
-                    </com.google.android.material.card.MaterialCardView>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/linearLayout3"
-                    android:layout_width="171dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="20dp"
-                    android:orientation="vertical"
-
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
-
-                    <com.google.android.material.card.MaterialCardView
-                        android:id="@+id/idCardplt"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:cardCornerRadius="15dp">
-
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-
-
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/PLATAFORM"
-                                android:layout_width="match_parent"
-                                android:layout_height="25dp"
-
-
-                                android:gravity="center"
-
-                                android:textAlignment="center"
-                                android:textAllCaps="true"
-                                android:textColor="#FBFBFB"
-                                android:textSize="12sp"
-                                android:textStyle="bold"
-                                android:typeface="normal" />
-
-                            <TextView
-                                android:id="@+id/platform2"
-                                android:layout_width="match_parent"
-                                android:layout_height="25dp"
-
-
-                                android:textAlignment="center"
-                                android:textAllCaps="true"
-                                android:textColor="#00E5FF"
-                                android:textSize="10sp"
-                                android:textStyle="bold"
-                                tools:ignore="SmallSp" />
-
-
-                        </LinearLayout>
-                    </com.google.android.material.card.MaterialCardView>
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/linearLayout4"
-                    android:layout_width="171dp"
-
-                    android:layout_height="50dp"
-
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="5dp"
-                    android:orientation="vertical"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
-
-                    <com.google.android.material.card.MaterialCardView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:paddingStart="5dp"
-                        app:cardCornerRadius="15dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-
-
-                            android:orientation="vertical">
-
-
-                            <TextView
-
-                                android:layout_width="match_parent"
-                                android:layout_height="25dp"
-
-                                android:gravity="center"
-
-                                android:textAlignment="center"
-                                android:textAllCaps="true"
-                                android:textColor="#FBFDFD"
-                                android:textSize="12sp"
-                                android:textStyle="bold"
-                                android:typeface="normal" />
-
-                            <TextView
-                                android:id="@+id/devName"
-                                android:layout_width="match_parent"
-                                android:layout_height="25dp"
-
-                                android:textAlignment="center"
-                                android:textAllCaps="true"
-                                android:textColor="#28E9FF"
-                                android:textSize="10sp"
-                                android:textStyle="bold"
-                                tools:ignore="SmallSp" />
-
-                        </LinearLayout>
-                    </com.google.android.material.card.MaterialCardView>
-
-                </LinearLayout>
+                        android:layout_height="200dp"
+                        android:layout_gravity="center"
+                        android:outlineAmbientShadowColor="@color/cardview_dark_background"
+                        android:outlineSpotShadowColor="@color/purple_700"
+
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/linearLayout5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
-                    android:layout_marginTop="15dp"
 
+
+                    android:layout_marginTop="10dp"
 
                     android:layout_marginEnd="15dp"
-
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+                    app:layout_constraintTop_toBottomOf="@+id/img"
                     tools:ignore="MissingClass">
 
 
@@ -413,8 +199,8 @@
                         android:layout_marginBottom="5dp"
 
                         android:gravity="center"
-                        android:paddingTop="2dp"
                         android:lineSpacingExtra="12sp"
+                        android:paddingTop="2dp"
 
                         android:textAlignment="center"
                         android:textAllCaps="true"
@@ -450,16 +236,14 @@
                             android:layout_width="35dp"
                             android:layout_height="35dp"
 
-                            android:layout_weight="0.3"
-                         />
+                            android:layout_weight="0.3" />
 
                         <com.google.android.material.imageview.ShapeableImageView
                             android:id="@+id/gmail"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
 
-                            android:layout_weight="0.3"
-                           />
+                            android:layout_weight="0.3" />
 
                         <com.google.android.material.imageview.ShapeableImageView
                             android:id="@+id/face"
@@ -467,11 +251,9 @@
                             android:layout_height="35dp"
 
 
-                            android:layout_weight="0.3"
-                            />
+                            android:layout_weight="0.3" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
-
 
 
                     <androidx.appcompat.widget.LinearLayoutCompat
