--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="50dp"
 
-
+android:background="@color/black"
     tools:context=".ui.SecondFragment">
 
     <ScrollView
@@ -42,6 +41,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
+
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -76,7 +76,7 @@
                 android:text="titleEd"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="#F8F805"
+                android:textColor="#F8F8F5"
                 android:textSize="24sp"
 
                 android:textStyle="bold" />
@@ -120,6 +120,7 @@
                             android:layout_height="match_parent"
                             android:layout_alignParentTop="true"
                             android:layout_marginTop="0dp"
+                            android:background="@drawable/gradientcolor2"
                             android:orientation="vertical">
 
                             <TextView
@@ -130,7 +131,7 @@
 
                                 android:gravity="center"
                                 android:lineSpacingExtra="12sp"
-                                android:text="Description"
+                                android:text="@string/detalle"
                                 android:textAlignment="center"
                                 android:textAllCaps="true"
                                 android:textColor="#FBFDFD"
@@ -150,7 +151,12 @@
                                 android:typeface="normal" />
 
 
+
+
+
+
                         </LinearLayout>
+
 
                     </com.google.android.material.card.MaterialCardView>
 
@@ -166,13 +172,26 @@
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
                         android:layout_gravity="center"
-                        android:outlineAmbientShadowColor="@color/cardview_dark_background"
-                        android:outlineSpotShadowColor="@color/purple_700"
+                        android:layout_marginStart="50dp"
+                        android:layout_marginTop="10dp"
 
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginEnd="50dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/dates"
+                        android:layout_width="wrap_content"
+                        android:layout_height="35dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:textColor="@color/teal_700"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -180,7 +199,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
-
+                    android:background="@drawable/gradientcolor2"
 
                     android:layout_marginTop="10dp"
 
@@ -192,112 +211,47 @@
                     tools:ignore="MissingClass">
 
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/appCompatTextView"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:layout_marginBottom="5dp"
-
-                        android:gravity="center"
-                        android:lineSpacingExtra="12sp"
-                        android:paddingTop="2dp"
-
-                        android:textAlignment="center"
-                        android:textAllCaps="true"
-                        android:textColor="#FDFDFD"
-                        android:textSize="12sp"
-                        android:textStyle="bold"
-
-
-                        android:typeface="normal"
-                        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:ignore="RtlSymmetry" />
-
-
-                    <androidx.appcompat.widget.LinearLayoutCompat
-                        android:id="@+id/linearLayout9"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp"
-
-                        android:layout_marginBottom="5dp"
-                        android:orientation="horizontal"
-                        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">
-
-
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:id="@+id/wsp"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-
-                            android:layout_weight="0.3" />
-
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:id="@+id/gmail"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-
-                            android:layout_weight="0.3" />
-
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:id="@+id/face"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-
-
-                            android:layout_weight="0.3" />
-
-                    </androidx.appcompat.widget.LinearLayoutCompat>
-
-
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:id="@+id/linearLayout8"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:orientation="vertical"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/linearLayout9">
+                        app:layout_constraintTop_toTopOf="parent">
 
                         <Button
-                            android:id="@+id/btnDownload"
+                            android:id="@+id/volver"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="15dp"
-                            android:layout_marginTop="10dp"
-
+                            android:layout_marginTop="15dp"
                             android:layout_marginEnd="15dp"
+                            android:layout_weight="0.3"
 
-
+                            android:backgroundTint="@color/teal_700"
                             android:paddingLeft="5dp"
                             android:paddingRight="5dp"
 
-                            android:textColor="#00E5FF"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            android:text="Volver"
+                            android:textColor="#F6F9FA" />
 
                         <Button
-                            android:id="@+id/btnBackLista"
+                            android:id="@+id/guardarFav"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="15dp"
-                            android:layout_marginTop="10dp"
-
+                            android:layout_marginTop="15dp"
                             android:layout_marginEnd="15dp"
-
+                            android:layout_marginBottom="26dp"
+                            android:layout_weight="0.3"
+                            android:backgroundTint="@color/teal_700"
                             android:paddingLeft="5dp"
                             android:paddingRight="5dp"
 
-                            android:textColor="#00E5FF"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            android:text="@string/favorito2"
+                            android:textColor="#EFF4F4" />
 
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
